--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>scala-workshop</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>${project.artifactId}</name>
-    <description>My wonderfull scala app</description>
+    <description>My wonderful scala app</description>
     <inceptionYear>2015</inceptionYear>
     <licenses>
         <license>
@@ -14,6 +14,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -104,7 +105,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.robertomanca.flights.App</mainClass>
+                            <mainClass>com.robertomanca.model.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
