--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
 
     <modules>
         <module>model</module>
+        <module>web</module>
+        <module>service</module>
     </modules>
 
     <dependencies>
