add repository for flight and add some tests in the service app

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>model</module>
         <module>web</module>
         <module>service</module>
+        <module>repository</module>
     </modules>
 
     <dependencies>
@@ -107,7 +108,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.robertomanca.model.App</mainClass>
+                            <mainClass>com.robertomanca.model.ModelApp</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
