--- a/model/pom.xml
+++ b/model/pom.xml
@@ -27,7 +27,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.robertomanca.model.App</mainClass>
+                            <mainClass>com.robertomanca.model.ModelApp</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
