start of refactor of repository layer; created new module repository contract

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>web</module>
         <module>service</module>
         <module>repository</module>
+        <module>repository-contract</module>
     </modules>
 
     <dependencies>
