--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>model</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.robertomanca.flights</groupId>
+            <artifactId>repository-contract</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <pluginRepositories>
